--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '18.x'
           registry-url: 'https://registry.npmjs.org'
       - uses: little-core-labs/get-git-tag@v3.0.1
         id: tagName
@@ -26,6 +26,8 @@ jobs:
           npm run test
           npm run build
           npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_ACCESS_TOKEN }}
 
   pkg-release:
     runs-on: ubuntu-latest
@@ -33,7 +35,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '16.x'
+          node-version: '18.x'
           registry-url: 'https://npm.pkg.github.com'
           scope: '@nayotta'
       - uses: little-core-labs/get-git-tag@v3.0.1
@@ -49,3 +51,5 @@ jobs:
           npm run test
           npm run build
           npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.PKG_ACCESS_TOKEN }}
